--- a/src/custom/custom.less
+++ b/src/custom/custom.less
@@ -1,1 +1,163 @@
-@import "node_modules/normalize.less/normalize.less";
+// @import "node_modules/normalize.less/normalize.less";
+@light-brown: #bb9d59;
+@dark-brown: #943415;
+@green: #497f35;
+
+* {
+	padding: 0;
+	margin: 0;
+	outline: 0;
+	border: 0;
+}
+html, body {
+	background-color: #fffde4;
+	font: 12px Arial;
+	color: @light-brown;
+}
+a {
+	color: @dark-brown;
+	&:hover {
+		text-decoration: none;
+	}
+}
+.g-button {
+	background: url(../images/button.png) no-repeat right -20px;
+	padding-right: 5px;
+	float: left;
+	&-in {
+		background: url(../images/button.png) no-repeat top left;
+		height: 20px;
+		padding: 0 0 3px 5px;
+		font-size: 11px;
+		color: @dark-brown;
+		text-align: center;
+	}
+}
+.l-top {
+	background: url(../images/top_back.png) repeat-x;
+	.h-top {
+		height: 450px;
+		background: url(../images/top_bird.jpg) no-repeat top left;
+		min-width: 1000px;
+		max-width: 1200px;
+		position: relative;
+	}
+}
+
+///////// top_menu /////////////
+.b-menu {
+	list-style: none;
+	font-weight: bold;
+	&-item {
+		float: left;
+		height: 18px;
+		padding: 2px 8px 0px 8px;
+		background: url(../images/top_active_menu.png) no-repeat 0px -36px;
+		&:first-child {
+			background: none;
+		}
+		&-link {
+			color: #45ada9;
+			text-decoration: none;
+		}
+		&:hover {
+			background-position: 0px -18px;
+		}
+		&.active:first-child,
+		&:first-child:hover {
+			padding-left: 7px;
+			background: url(../images/top_active_menu.png) no-repeat -1px -18px !important;
+		}
+	}
+}
+.b-menu-top {
+	position: absolute;
+	top: 32px;
+	right: 20px;
+	.b-menu-item.active .b-menu-item-link,
+	.b-menu-item:hover .b-menu-item-link {
+		color: @dark-brown;
+		display: block;
+		height: 16px;
+		background: url(../images/top_active_menu.png) no-repeat right 0px;
+		padding: 2px 6px 0 0;
+	}
+	.b-menu-item.active,
+	.b-menu-item:hover {
+		padding-top: 0px;
+		padding-right: 2px;
+		background: url(../images/top_active_menu.png) no-repeat 0px -18px;
+	}
+}
+///////// end_top_menu /////////
+
+///////// logo /////////////
+.b-logo {
+	width: 220px;
+	height: 44px;
+	text-indent: -2000px;
+	background: url(../images/logo.png) no-repeat;
+	position: absolute;
+	top: 75px;
+	right: 208px;
+}
+///////// end_logo /////////
+
+///////// form_login /////////////
+.b-auth {
+	position: absolute;
+	top: 152px;
+	right: 16px;
+	&-name {
+		font: 27px Georgia;
+		color: @green;
+		padding-bottom: 11px;
+	}
+	&-label {
+		display: inline;
+	}
+	&-input {
+		width: 161px;
+		height: 20px;
+		padding: 0 10px;
+		margin-right: 25px;
+		color: @light-brown;
+		font-size: 10px;
+		background-color: #f9f6d4;
+	}
+	&-regsub {
+		color: #ab8e4e;
+		font-size: 16px;
+		padding-top: 16px;
+		&-submit {
+			float: none;
+			padding-bottom: 5px;
+			padding-left: 16px;
+			position: relative;
+			top: -2px;
+		}
+	}
+	&-reg {
+		color: @dark-brown;
+		text-decoration: none;
+		&:hover {
+			text-decoration: underline;
+		}
+	}
+	&-submit {
+		width: 60px;
+	}
+}
+///////// end_form_login /////////
+
+///////// slogan /////////////
+.b-slogan {
+	font: 28px Georgia;
+	color: @green;
+	padding: 0 90px;
+	text-align: center;
+	position: absolute;
+	bottom: 0px;
+	left: 0px;
+}
+///////// end_slogan /////////
