--- a/src/custom/custom.less
+++ b/src/custom/custom.less
@@ -161,3 +161,59 @@ a {
 	left: 0px;
 }
 ///////// end_slogan /////////
+
+///////// footer /////////////
+.l-footer {
+	clear: both;
+	height: 102px;
+	padding-top: 33px;
+	text-align: center;
+	background: url(../images/footer_line.png) no-repeat top center;
+	min-width: 1000px;
+	max-width: 1200px;
+	position: relative;
+	font-size: 11px;
+}
+.b-menu-footer {
+	// font-size: 11px;
+	.b-menu-item {
+		float: none;
+		display: inline;
+		background: url(../images/bottom_menu_separator.png) no-repeat 0px 3px;
+		padding-right: 4px;
+		&-link,
+		&.active .b-menu-item-link {
+			color: @dark-brown;
+			text-decoration: none;
+		}
+		&-link:hover {
+			text-decoration: underline;
+		}
+	}
+}
+.b-copyright {
+	padding: 4px 0;
+}
+.b-designby {
+	// font-size: 11px;
+	font-weight: bold;
+	padding-bottom: 7px;
+	&-link {
+		text-decoration: none;
+	}
+}
+.b-valid {
+	width: 142px;
+	margin: 0 auto;
+	&-field {
+		padding-left: 5px;
+	}
+	&-link {
+		display: block;
+		text-decoration: none;
+		padding-top: 5px;
+		background-position: left 2px;
+		width: 56px;
+	}
+}
+///////// end_footer /////////
