--- a/www/css/custom.css
+++ b/www/css/custom.css
@@ -145,3 +145,52 @@ a:hover {
   bottom: 0px;
   left: 0px;
 }
+.l-footer {
+  clear: both;
+  height: 102px;
+  padding-top: 33px;
+  text-align: center;
+  background: url(../images/footer_line.png) no-repeat top center;
+  min-width: 1000px;
+  max-width: 1200px;
+  position: relative;
+  font-size: 11px;
+}
+.b-menu-footer .b-menu-item {
+  float: none;
+  display: inline;
+  background: url(../images/bottom_menu_separator.png) no-repeat 0px 3px;
+  padding-right: 4px;
+}
+.b-menu-footer .b-menu-item-link,
+.b-menu-footer .b-menu-item.active .b-menu-item-link {
+  color: #943415;
+  text-decoration: none;
+}
+.b-menu-footer .b-menu-item-link:hover {
+  text-decoration: underline;
+}
+.b-copyright {
+  padding: 4px 0;
+}
+.b-designby {
+  font-weight: bold;
+  padding-bottom: 7px;
+}
+.b-designby-link {
+  text-decoration: none;
+}
+.b-valid {
+  width: 142px;
+  margin: 0 auto;
+}
+.b-valid-field {
+  padding-left: 5px;
+}
+.b-valid-link {
+  display: block;
+  text-decoration: none;
+  padding-top: 5px;
+  background-position: left 2px;
+  width: 56px;
+}
