--- a/www/css/custom.css
+++ b/www/css/custom.css
@@ -182,7 +182,7 @@ a:hover {
 }
 .b-photo-list-item-href {
   display: block;
-  background: url(../images/zoom.png) no-repeat 200px 66px;
+  background: url(../images/zoom.png) no-repeat 200px 80px;
   text-align: right;
   font: 11px Arial;
   font-weight: bold;
@@ -191,7 +191,7 @@ a:hover {
 .b-photo-list-item-href:hover {
   text-decoration: underline;
 }
-.b-photo-list-image {
+.b-photo-list-item-image {
   display: block;
   border: 3px solid #d3cfa3;
   margin-bottom: 7px;
