--- a/www/css/custom.css
+++ b/www/css/custom.css
@@ -17,7 +17,7 @@ a:hover {
   text-decoration: none;
 }
 .g-button {
-  background: url(../images/button.png) no-repeat right -20px;
+  background: url(../images/button.png) no-repeat right -22px;
   padding-right: 5px;
   float: left;
 }
@@ -29,6 +29,9 @@ a:hover {
   color: #943415;
   text-align: center;
 }
+.g-button-in:hover {
+  cursor: pointer;
+}
 .g-sidebar-header {
   font: 24px Georgia;
   color: #0b636b;
@@ -38,11 +41,11 @@ a:hover {
 }
 .l-top {
   background: url(../images/top_back.png) repeat-x;
+  min-width: 1000px;
 }
 .l-top .h-top {
   height: 450px;
   background: url(../images/top_bird.jpg) no-repeat top left;
-  min-width: 1000px;
   max-width: 1200px;
   position: relative;
 }
@@ -130,6 +133,7 @@ a:hover {
   float: none;
   padding-bottom: 5px;
   padding-left: 16px;
+  background-position: right -20px;
   position: relative;
   top: -2px;
 }
@@ -148,12 +152,13 @@ a:hover {
   color: #497f35;
   padding: 0 90px;
   text-align: center;
+  line-height: 30px;
   position: absolute;
   bottom: 0px;
   left: 0px;
 }
 .l-content {
-  padding: 41px 35px 32px 35px;
+  padding: 41px 30px 32px 35px;
   min-width: 930px;
   max-width: 1130px;
 }
@@ -169,6 +174,7 @@ a:hover {
   width: 262px;
   min-height: 350px;
   padding-left: 36px;
+  padding-top: 5px;
 }
 .b-photo-header {
   padding-bottom: 15px;
@@ -228,7 +234,9 @@ a:hover {
 }
 .b-qcontact-fiebut {
   padding-left: 8px;
-  background-position: right -22px;
+}
+.b-projects {
+  padding-top: 6px;
 }
 .b-projects-header {
   padding-bottom: 8px;
@@ -265,6 +273,7 @@ a:hover {
 .b-article-h2 {
   font: 18px Georgia;
   color: #943415;
+  padding-bottom: 4px;
 }
 .b-article-text {
   line-height: 16px;
@@ -309,7 +318,7 @@ a:hover {
   height: 211px;
   background: url(../images/frame.png) no-repeat;
   float: left;
-  margin: -20px 20px 0 0;
+  margin: -20px 20px 0 -5px;
   display: table-cell;
 }
 .b-frame-link {
@@ -415,7 +424,6 @@ blockquote {
 .b-valid-link {
   display: block;
   text-decoration: none;
-  padding-top: 5px;
-  background-position: left 2px;
+  padding-top: 3px;
   width: 56px;
 }
